--- a/index.html
+++ b/index.html
@@ -48,98 +48,7 @@
             </button>
           </div>
         </section>
-        <section class="gallery">
-          <div class="gallery__item">
-            <img
-              src="./images/kirill-pershin_1.png"
-              alt="Valle de Yosemite"
-              class="gallery__image"
-            />
-            <div class="gallery__content-text">
-              <h2 class="gallery__title-item">Valle de Yosemite</h2>
-              <img
-                src="./images/heartSignDesactive.svg"
-                alt="Icono de un corazón para dar me gusta"
-                class="gallery__icon-heart"
-              />
-            </div>
-          </div>
-          <div class="gallery__item">
-            <img
-              src="./images/kirill-pershin_2.png"
-              alt="Lago Louise"
-              class="gallery__image"
-            />
-            <div class="gallery__content-text">
-              <h2 class="gallery__title-item">Lago Louise</h2>
-              <img
-                src="./images/heartSignDesactive.svg"
-                alt="Icono de un corazón para dar me gusta"
-                class="gallery__icon-heart"
-              />
-            </div>
-          </div>
-          <div class="gallery__item">
-            <img
-              src="./images/kirill-pershin_3.png"
-              alt="Montañas Calvas"
-              class="gallery__image"
-            />
-            <div class="gallery__content-text">
-              <h2 class="gallery__title-item">Montañas Calvas</h2>
-              <img
-                src="./images/heartSignDesactive.svg"
-                alt="Icono de un corazón para dar me gusta"
-                class="gallery__icon-heart"
-              />
-            </div>
-          </div>
-          <div class="gallery__item">
-            <img
-              src="./images/kirill-pershin_4.png"
-              alt="Latemar"
-              class="gallery__image"
-            />
-            <div class="gallery__content-text">
-              <h2 class="gallery__title-item">Latemar</h2>
-              <img
-                src="./images/heartSignDesactive.svg"
-                alt="Icono de un corazón para dar me gusta"
-                class="gallery__icon-heart"
-              />
-            </div>
-          </div>
-          <div class="gallery__item">
-            <img
-              src="./images/kirill-pershin_5.png"
-              alt="Vanoise National Park"
-              class="gallery__image"
-            />
-            <div class="gallery__content-text">
-              <h2 class="gallery__title-item">Vanoise National Park</h2>
-              <img
-                src="./images/heartSignDesactive.svg"
-                alt="Icono de un corazón para dar me gusta"
-                class="gallery__icon-heart"
-              />
-            </div>
-          </div>
-          <div class="gallery__item">
-            <img
-              src="./images/kirill-pershin_6.png"
-              alt="Lago di Braies"
-              class="gallery__image"
-            />
-            <div class="gallery__content-text">
-              <h2 class="gallery__title-item">Lago di Braies</h2>
-              <img
-                src="./images/heartSignDesactive.svg"
-                alt="Icono de un corazón para dar me gusta"
-                class="gallery__icon-heart"
-              />
-            </div>
-          </div>
-        </section>
+        <div class="gallery"></div>
       </main>
       <footer class="footer">
         <div class="footer__container">
@@ -153,12 +62,59 @@
             src="./images/close_icon.png"
             alt="icono en tache para cerrar form"
           />
-          <h1 class="popup__title-update">Edit profile</h1>
+          <h1 class="popup__title-update">Edita perfil</h1>
           <input type="text" class="popup__name-update" />
           <input type="text" class="popup__desc-update" />
           <button class="popup__buton-update">Guardar</button>
         </form>
       </div>
+      <div class="popup-picture">
+        <form class="popup-picture__container">
+          <img
+            class="popup-picture__close"
+            src="./images/close_icon.png"
+            alt="icono en tache para cerrar formulario para agregar fotos"
+          />
+          <h1 class="popup-picture__title-create">Nuevo Lugar</h1>
+          <input
+            type="text"
+            class="popup-picture__name-create"
+            placeholder="Titulo"
+          />
+          <input
+            type="text"
+            class="popup-picture__link-create"
+            placeholder="Enlace a la imagen"
+          />
+          <button class="popup-picture__buton-create">Crear</button>
+        </form>
+      </div>
+      <div class="popup-show">
+        <div class="popup-show__container">
+          <img
+            class="popup-show__close"
+            src="./images/close_icon.png"
+            alt="icono en tache para cerrar formulario para agregar fotos"
+          />
+          <img class="popup-show__add" src="" alt="" />
+          <p class="popup-show__title-create"></p>
+        </div>
+      </div>
+
+      <template id="gallery-template">
+        <div class="gallery__item">
+          <img
+            src="./images/trash.png"
+            alt="Bote de basura para eliminar una foto"
+            class="gallery__trash"
+          />
+          <img src="" alt="" class="gallery__image" />
+          <div class="gallery__content-text">
+            <h2 class="gallery__title-item"></h2>
+            <button class="gallery__like"></button>
+          </div>
+        </div>
+      </template>
     </div>
     <script src="./scripts/script.js"></script>
   </body>
