--- a/index.html
+++ b/index.html
@@ -96,7 +96,11 @@
             src="./images/close_icon.png"
             alt="icono en tache para cerrar formulario para agregar fotos"
           />
-          <img class="popup-show__add" src="" alt="" />
+          <img
+            class="popup-show__add"
+            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+            alt="desc"
+          />
           <p class="popup-show__title-create"></p>
         </div>
       </div>
@@ -108,7 +112,11 @@
             alt="Bote de basura para eliminar una foto"
             class="gallery__trash"
           />
-          <img src="" alt="" class="gallery__image" />
+          <img
+            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+            alt="desc"
+            class="gallery__image"
+          />
           <div class="gallery__content-text">
             <h2 class="gallery__title-item"></h2>
             <button class="gallery__like"></button>
