--- a/index.html
+++ b/index.html
@@ -56,20 +56,36 @@
         </div>
       </footer>
       <div class="popup">
-        <form class="popup__container">
+        <form class="popup__container popup__form">
           <img
             class="popup__close"
             src="./images/close_icon.png"
             alt="icono en tache para cerrar form"
           />
           <h1 class="popup__title-update">Edita perfil</h1>
-          <input type="text" class="popup__name-update" />
-          <input type="text" class="popup__desc-update" />
-          <button class="popup__buton-update">Guardar</button>
+          <input
+            type="text"
+            class="popup__name-update popup__input"
+            id="input-name"
+            minlength="2"
+            maxlength="40"
+            required
+          />
+          <span class="popup__error input-name-error"></span>
+          <input
+            type="text"
+            class="popup__desc-update popup__input"
+            id="input-desc"
+            minlength="2"
+            maxlength="200"
+            required
+          />
+          <span class="popup__error input-desc-error"></span>
+          <button class="popup__buton-update popup__button">Guardar</button>
         </form>
       </div>
       <div class="popup-picture">
-        <form class="popup-picture__container">
+        <form class="popup-picture__container popup__form">
           <img
             class="popup-picture__close"
             src="./images/close_icon.png"
@@ -78,15 +94,25 @@
           <h1 class="popup-picture__title-create">Nuevo Lugar</h1>
           <input
             type="text"
-            class="popup-picture__name-create"
+            class="popup-picture__name-create popup__input"
+            id="input-place"
             placeholder="Titulo"
+            minlength="2"
+            maxlength="30"
+            required
           />
+          <span class="popup__error input-place-error"></span>
           <input
-            type="text"
-            class="popup-picture__link-create"
+            type="url"
+            class="popup-picture__link-create popup__input"
+            id="input-link"
             placeholder="Enlace a la imagen"
+            required
           />
-          <button class="popup-picture__buton-create">Crear</button>
+          <span class="popup__error input-link-error"></span>
+          <button class="popup-picture__buton-create popup__button">
+            Crear
+          </button>
         </form>
       </div>
       <div class="popup-show">
@@ -125,5 +151,6 @@
       </template>
     </div>
     <script src="./scripts/script.js"></script>
+    <script src="./scripts/validation.js"></script>
   </body>
 </html>
