--- a/index.html
+++ b/index.html
@@ -148,7 +148,6 @@
         </div>
       </template>
     </div>
-    <script src="./scripts/script.js"></script>
-    <script src="./scripts/validation.js"></script>
+    <script src="./scripts/index.js" type="module"></script>
   </body>
 </html>
