--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <header class="header">
         <img
           src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-          alt="Logototipo de una Página iteractiva de viajes por los estados unidos"
+          alt="Logototipo de una Página iteractiva"
           class="header__logo"
           id="image-logo"
         />
@@ -29,17 +29,27 @@
               class="profile__face-image"
               id="image-profile"
             />
+            <div class="profile__content-edit" id="image-content">
+              <img
+                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                alt="Logotipo de un lápiz para editar"
+                class="profile__edit-pencil"
+                id="image-edit-pencil"
+              />
+            </div>
+
             <div class="profile__data">
               <div class="profile__info">
-                <h2 class="profile__name">Jacques Cousteau</h2>
-                <img
-                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                  alt="Botón en forma de lápiz que indica que se puede editar la información del perfil"
-                  class="profile__edit-data"
-                  id="image-pencil"
-                />
+                <h2 class="profile__name"></h2>
+                <div class="profile__edit-data">
+                  <img
+                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                    alt="Botón en forma de lápiz que indica que se puede editar la información del perfil"
+                    id="image-pencil"
+                  />
+                </div>
               </div>
-              <p class="profile__description">Explorador</p>
+              <p class="profile__description"></p>
             </div>
             <button class="profile__add-picture">
               <img
@@ -80,7 +90,7 @@
             type="text"
             class="popup__desc popup__input"
             id="input-desc"
-            name="job"
+            name="about"
             minlength="2"
             maxlength="200"
             required
@@ -118,7 +128,7 @@
             required
           />
           <span class="popup__error input-link-error"></span>
-          <button class="popup__btn popup__button">Crear</button>
+          <button class="popup__btn popup__button">Guardar</button>
         </form>
       </div>
       <div class="popup-show" id="popup-show_id">
@@ -138,6 +148,39 @@
           <p class="popup-show__title-create"></p>
         </div>
       </div>
+      <div class="popup" id="popup-delete">
+        <form class="popup__container popup__form">
+          <img
+            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+            class="popup__close"
+            alt="icono en tache para cerrar ventana de confirmación"
+            id="close-delete"
+          />
+          <h1 class="popup__confirm popup__title">¿Estás seguro/a?</h1>
+          <button class="popup__btn popup__button" id="remove-card">Si</button>
+        </form>
+      </div>
+      <div class="popup" id="popup-change">
+        <form class="popup__container popup__form">
+          <img
+            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+            class="popup__close"
+            alt="icono en tache para cerrar formulario para agregar fotos"
+            id="close-change"
+          />
+          <h1 class="popup__title">Cambiar foto de perfil</h1>
+          <input
+            type="url"
+            class="popup__desc popup__input"
+            id="input-url"
+            name="url"
+            placeholder="Enlace a la imagen"
+            required
+          />
+          <span class="popup__error input-url-error"></span>
+          <button class="popup__btn popup__button">Guardar</button>
+        </form>
+      </div>
 
       <template id="gallery-template">
         <div class="gallery__item">
@@ -153,7 +196,10 @@
           />
           <div class="gallery__content-text">
             <h2 class="gallery__title-item"></h2>
-            <button class="gallery__like"></button>
+            <div class="gallery__container">
+              <button class="gallery__like"></button>
+              <span class="gallery__like-number"></span>
+            </div>
           </div>
         </div>
       </template>
